Fix mentor review comments
